--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="role_enter">role</string>
     <string name="pass_enter">password</string>
     <string name="conf_pass_enter">confirm password</string>
+    <string name="add_task">+ ADD TASK</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
