--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="add_task">+ ADD TASK</string>
     <string name="add">+ Add</string>
     <string name="hint_role">Role</string>
+    <string name="hint_activity">Activity</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
