--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="add">+ Add</string>
     <string name="hint_role">Role</string>
     <string name="hint_activity">Activity</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
