--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="temp_message_1">SLOW AND STEADY WINS THE RACE!</string>
     <string name="temp_message_2">WORK HARDER! YOU\'RE ALMOST THERE</string>
     <string name="no_log_found">No Log Found till Now!!</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
