--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="no_log_found">No Log Found till Now!!</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="hint_recommender">Recommend For</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
