--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,34 @@
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
     <string name="hint_recommender">Recommend For</string>
+    <string-array name="work_duration">
+        <item>None</item>
+        <item>15 Minutes</item>
+        <item>25 Minutes</item>
+        <item>30 Minutes</item>
+        <item>45 Minutes</item>
+        <item>60 Minutes</item>
+        <item>Custom</item>
+    </string-array>
+
+    <string-array name="long_break">
+        <item>None</item>
+        <item>5 Minutes</item>
+        <item>10 Minutes</item>
+        <item>15 Minutes</item>
+        <item>30 Minutes</item>
+        <item>Custom</item>
+    </string-array>
+
+    <string-array name="short_break">
+        <item>None</item>
+        <item>1 Minute</item>
+        <item>2 Minutes</item>
+        <item>5 Minutes</item>
+        <item>10 Minutes</item>
+        <item>Custom</item>
+    </string-array>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
